# Kaizen

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: Core.h  Event.h  EventSystem.h  Event_sys.h  Kaizen.h  Logger.h  ManagerEvent.h
src/: EventSystem.cpp  Kaizen.cpp  Logger.cpp  main.cpp
